2016-01-31  Gabriel Dos Reis  <gdr@axiomatics.org>

	Breaking change from previous version: No more support for command
	line --show-insn option, and library compiler ")set )report" option.
	* interp/g-opt.boot (optimizeFunctionDef): Remove reference to
	$reportOptimization. 
	* interp/g-timer.boot (timedOptimization): Likewise.
	* interp/i-syscmd.boot (compileSpad2Cmd): Likewise.
	($setOptions): Remove support for ")report".
	* interp/sys-driver.boot (initializeGlobalState): Likewise.

2016-01-17  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/daase.lisp (GETDATABASE): Remove PARENTS case.
	* interp/database.boot (getConstructorParentsFromDB): Take data
	from compiled code.

2016-01-16  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/sys-driver.boot (initializeDatabase): Be frugal when
	building the algebra.
	* interp/i-funsel.boot (isOpInDomain): Tidy.
	(findUniqueOpInDomain): Likewise.
	(hasSig): Likewise.
	* interp/i-special.boot (constantInDomain?): Likewise.
	* interp/lisplib.boot (isFunctor): Likewise.
	* interp/spad-parser.boot (storeBlanks!): Define.
	* interp/database.boot (getConstructorModemap): Take directly from
	generated code.
	(getConstructorOperationsFromDB): Likewise.
	(getSuperDomainFromDB): Tidy.
	* interp/daase.lisp (GETDATABASE): Remove CONSTRUCTORMODEMAP and
	OPERATIONALIST cases.
	(defaultPackageForm): New.
	(simpleMacro?): Likewise.
	(macroDefined?): Likewise.
	(writeMinimalDB): New.  Split out of printInitdbInfo.
	* interp/c-util.boot (completeDefaultPackageParameters): New.
	(makeDefaultPackageParameters): Likewise.
	* algebra/oderf.spad.pamphlet: Fix decades-old syntax error.

2016-01-07  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/br-data.boot (parentsOf): Remove.  Adjust users.

2016-01-06  Gabriel Dos Reis  <gdr@axiomatics.org>

	* interp/c-util.boot (dbForCategory?): New.  Use in lieu of
	removed $insideCategoryIfTrue.
	* interp/sys-globals.boot ($insideCategoryIfTrue): Remove.  Adjust
	users. 
