@@ -63,7 +63,6 @@ OA_SRC_TARGETS = \
 	all-clef \
 	all-doc \
 	all-graph \
-	all-klfbackend \
 	all-gui \
 	all-hyper \
 	all-input \
